Cambie el titulo
Un nuevo titulo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> DIGITAL SERVICE COMPANY </title>
+    <title> Compañia digital de servicios </title>
     <link rel="stylesheet" href="CSS/estilos.css">
 
   </head>
